# nianbao

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
api/: main.py
api/core/clean/: units.py
api/core/diff/: table.py  text.py
api/core/export/: report.py
api/core/facts/: numbers.py
api/core/parsers/: simple.py
api/core/recognize/: auto.py
api/data/: region_domain_map.json
api/data/aliases/: 320800.txt
api/data/samples/: sample_2023.txt  sample_2024.txt
api/models/: datastore.py
api/routes/: ai.py  batch.py  compare.py  diff.py  ingest.py
api/services/: compare.py  documents.py
api/templates/: boilerplate.txt  report.html.j2  table_schema.json
docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml
tests/: test_auto_detect_pair.py  test_balance_rules.py  test_boilerplate_exclusion.py  test_e2e_ingest_compare.py  test_table_diff_zero_rule.py  test_text_numeric_facts.py  test_units_normalize.py
web/: next-env.d.ts  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/batch/: page.tsx
web/app/compare/[pairId]/: page.tsx
web/app/documents/: page.tsx
web/app/ingest/: page.tsx
web/app/pairs/[id]/: page.tsx
web/app/reports/[pairId]/: page.tsx
web/components/: AutoPairCard.tsx  DualUploader.tsx  SplitDiff.tsx  SummaryCards.tsx  Uploader.tsx
web/lib/: api.ts
